# todolistmcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  schema.sql  server.py
server/: mcp_server.py
